--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,18 +22,21 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tvSwitchName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ENABLE REACHABLE" />
+                android:textSize="18sp"
+                android:text="ENABLE" />
 
             <Switch
                 android:id="@+id/swReceiver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:switchMinWidth="0dp"
                 tools:checked="false" />
         </LinearLayout>
 
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
@@ -42,15 +45,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:text="SEND AUTO RESPONSE SMS" />
 
             <Switch
                 android:id="@+id/swAutoResponseSMS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:switchMinWidth="0dp"
                 android:enabled="false"
                 tools:checked="false" />
-        </LinearLayout>
+        </LinearLayout>-->
 
     </LinearLayout>
 
@@ -64,5 +69,5 @@
         android:layout_marginRight="10dp"
         android:fontFamily="sans-serif-smallcaps"
         android:textColor="@android:color/white"
-        android:text="REACHABLE" />
+        android:text="@string/app_name" />
 </LinearLayout>
