ready and released first version of the app

--- a/app/src/main/res/layout/activity_alert.xml
+++ b/app/src/main/res/layout/activity_alert.xml
@@ -4,24 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    style="@style/AppTheme.NoTitle"
     tools:context="in.appfocus.reachable.AlertActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Reachable" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="You have an urgent SMS" />
+        android:id="@+id/tvInstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="btnStopClicked"
-        android:text="OK" />
+        android:onClick="btnCloseClicked"
+        android:text="CLOSE" />
 </LinearLayout>
