--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvSwitchName"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="ENABLE" />
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvSwitchName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="ENABLE" />
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_marginLeft="15dp"
+                    android:textSize="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="?"
+                    android:onClick="tvInstructionsClicked"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
             <Switch
                 android:id="@+id/swReceiver"
